# python-gait-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/: logging_formatter.py  shank_thigh_send.proto  shank_thigh_send_pb2.py
docker/: .dockerignore  analyze_gait.Dockerfile  zmq_server.Dockerfile
scripts/: read_hdf5_data.py
src/analyze_gait/: __init__.py  __main__.py
src/zmq_server/: __init__.py  __main__.py
