[tool.poetry]
name = "python-gait-analysis"
version = "0.1.0"
description = "Python module to analyze gait, cadence, and other running behaviors"
authors = ["Patrick Walsh <pw4.2020@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
h5py = "^3.9.0"
pygame = "^2.5.2"
protobuf = "^4.24.3"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
